--- a/index.html
+++ b/index.html
@@ -4,102 +4,126 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Slide Guys Booking</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"/>
-  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" />
+  <style>
+    body {
+      background-color: #f8f9fa;
+      font-family: Arial, sans-serif;
+    }
+
+    .booking-form {
+      max-width: 500px;
+      margin: 50px auto;
+      background: white;
+      padding: 30px;
+      border-radius: 10px;
+      box-shadow: 0 4px 20px rgba(0,0,0,0.1);
+    }
+
+    .form-control,
+    .form-select {
+      background-color: #e9f0ff;
+    }
+
+    .btn-primary {
+      background-color: #006aff;
+      border: none;
+    }
+
+    .btn-primary:hover {
+      background-color: #0051c9;
+    }
+  </style>
 </head>
-<body style="background-color: #f8f9fa;">
+<body>
+  <div class="booking-form text-center">
+    <img src="https://via.placeholder.com/150x50?text=Slide+Guys+Logo" alt="Slide Guys Logo" class="mb-3">
+    <h2 class="mb-3">Slide Guys Booking</h2>
+    <p>Select a unit and the date you would like to reserve. No cancellations.<br>Rescheduling is subject to availability.</p>
+    
+    <form id="bookingForm">
+      <input type="text" id="name" class="form-control mb-2" placeholder="Full Name" required />
+      <input type="tel" id="phone" class="form-control mb-2" placeholder="Phone Number" required />
+      <input type="email" id="email" class="form-control mb-2" placeholder="Email Address" required />
+      <input type="text" id="address" class="form-control mb-2" placeholder="Address" required />
 
-  <div class="container d-flex justify-content-center align-items-center" style="min-height: 100vh;">
-    <div class="card shadow p-4" style="width: 100%; max-width: 500px;">
-      <div class="text-center">
-        <img src="https://via.placeholder.com/150x50?text=Slide+Guys+Logo" alt="Slide Guys Logo" class="mb-3" />
-        <h2>Slide Guys Booking</h2>
-        <p>Select a unit and the date you would like to reserve. No cancellations. <br>Rescheduling is subject to availability.</p>
-      </div>
+      <select id="unit" class="form-select mb-2" required>
+        <option value="" disabled selected>Select a unit</option>
+      </select>
 
-      <form id="booking-form">
-        <input type="text" class="form-control mb-2" id="name" placeholder="Your Name" required />
-        <input type="tel" class="form-control mb-2" id="phone" placeholder="Phone Number" required />
-        <input type="email" class="form-control mb-2" id="email" placeholder="Email" required />
-        <input type="text" class="form-control mb-2" id="address" placeholder="Address" required />
-        
-        <select class="form-select mb-2" id="unit" required>
-          <option value="">Select a unit</option>
-        </select>
+      <input type="date" id="date" class="form-control mb-3" required min="<?= new Date().toISOString().split('T')[0] ?>" />
 
-        <input type="date" class="form-control mb-3" id="date" required />
+      <button type="submit" class="btn btn-primary w-100">Reserve</button>
+    </form>
 
-        <button type="submit" class="btn btn-primary w-100">Reserve</button>
-      </form>
-
-      <div id="success-msg" class="alert alert-success mt-3 d-none">Booking submitted successfully!</div>
-      <div id="error-msg" class="alert alert-danger mt-3 d-none">An error occurred. Please try again.</div>
+    <div id="successMessage" class="mt-3 text-success" style="display:none;">
+      Booking successful!
+    </div>
+    <div id="errorMessage" class="mt-3 text-danger" style="display:none;">
+      That unit is already booked on this date.
     </div>
   </div>
 
+  <!-- Supabase -->
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
   <script>
-    // ✅ Initialize Supabase
     const supabaseUrl = 'https://vaobmohukgcqfvnclqyh.supabase.co';
     const supabaseKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InZhb2Jtb2h1a2djcWZ2bmNscXloIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDQ3NTcyNzksImV4cCI6MjA2MDMzMzI3OX0.6pl5QBTVUr8wu3bn4kXhI2kPE5qf97PrIbUw7-0382M';
     const supabase = supabase.createClient(supabaseUrl, supabaseKey);
 
-    // ✅ Populate unit options from Supabase
     async function loadUnits() {
       const { data, error } = await supabase.from('units').select('*');
-      if (error) {
-        console.error('Error loading units:', error);
-        return;
-      }
       const unitSelect = document.getElementById('unit');
-      data.forEach(unit => {
-        const option = document.createElement('option');
-        option.value = unit.id;
-        option.textContent = unit.name;
-        unitSelect.appendChild(option);
-      });
+      if (data) {
+        data.forEach(unit => {
+          const option = document.createElement('option');
+          option.value = unit.id;
+          option.textContent = unit.name;
+          unitSelect.appendChild(option);
+        });
+      } else {
+        console.error('Error loading units:', error);
+      }
     }
 
-    // ✅ Handle form submission
-    document.getElementById('booking-form').addEventListener('submit', async (e) => {
-      e.preventDefault();
+    document.addEventListener('DOMContentLoaded', () => {
+      loadUnits();
 
-      const name = document.getElementById('name').value.trim();
-      const phone = document.getElementById('phone').value.trim();
-      const email = document.getElementById('email').value.trim();
-      const address = document.getElementById('address').value.trim();
-      const unitId = document.getElementById('unit').value;
-      const date = document.getElementById('date').value;
+      document.getElementById('bookingForm').addEventListener('submit', async (e) => {
+        e.preventDefault();
 
-      if (!unitId) {
-        alert("Please select a unit from the dropdown.");
-        return;
-      }
+        const name = document.getElementById('name').value.trim();
+        const phone = document.getElementById('phone').value.trim();
+        const email = document.getElementById('email').value.trim();
+        const address = document.getElementById('address').value.trim();
+        const unit_id = document.getElementById('unit').value;
+        const date = document.getElementById('date').value;
 
-      const { error } = await supabase.from('bookings').insert([
-        {
-          name,
-          phone,
-          email,
-          address,
-          unit_id: unitId,
-          date
+        const { data: existing, error: checkError } = await supabase
+          .from('bookings')
+          .select('*')
+          .eq('unit_id', unit_id)
+          .eq('date', date);
+
+        if (existing.length > 0) {
+          document.getElementById('errorMessage').style.display = 'block';
+          document.getElementById('successMessage').style.display = 'none';
+          return;
         }
-      ]);
 
-      if (error) {
-        console.error('Booking failed:', error);
-        document.getElementById('error-msg').classList.remove('d-none');
-        document.getElementById('success-msg').classList.add('d-none');
-      } else {
-        document.getElementById('booking-form').reset();
-        document.getElementById('success-msg').classList.remove('d-none');
-        document.getElementById('error-msg').classList.add('d-none');
-      }
+        const { error } = await supabase.from('bookings').insert([
+          { name, phone, email, address, unit_id, date }
+        ]);
+
+        if (error) {
+          alert('Error booking: ' + error.message);
+        } else {
+          document.getElementById('successMessage').style.display = 'block';
+          document.getElementById('errorMessage').style.display = 'none';
+          document.getElementById('bookingForm').reset();
+        }
+      });
     });
-
-    // ✅ Load units on page load
-    loadUnits();
   </script>
-
 </body>
 </html>
